--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,19 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.12.Final</version>
+        </dependency>
+
+
         <!-- MySQL -->
         <dependency>
             <groupId>mysql</groupId>
@@ -54,6 +67,7 @@
             <version>5.2.4.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
 
 
 
