--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <relativePath />
     </parent>
 
+
+
     <dependencies>
 <!--        Spring dependencies-->
         <dependency>
@@ -69,9 +71,15 @@
         </dependency>
 
 
-
-
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
