--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,17 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 
+		<!-- send email -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+
 		<!-- MySQL -->
 		<dependency>
 			<groupId>mysql</groupId>
